src/test/deca/context/invalid/provided/boucle_while_condition_non_booleenne.deca
// Description:
//    Condition non booléenne dans une boucle `while`.
//
// Resultats:
//    boucle_while_condition_non_booleenne.deca:13:7: The type of the condition must be boolean
//
// Historique:
//    cree le 11/01/2025

int x = 5;
{
// Doit etre refuse.
while (x) {
   x = x - 1;
}
}
